--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.PERSONAL_GITHUB_KEY }}
         with:
-          source-directory: "output"
+          source-directory: 'output'
           destination-github-username: 99mini
           destination-repository-name: client-app
           user-email: ${{ secrets.PERSONAL_ACCOUNT_EMAIL }}
