--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Lint
         run: npm run lint
       - name: Prettier
-        run: npm run prettier:check
+        run: npm run format:check
       - name: Type check
         run: npm run type-check
