--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup Node 20.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.x'
+
       - name: Install dependencies
         run: npm install
       - name: Lint
