--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "es-hangul": "^2.2.1",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18"
