--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "axios": "^1.7.7",
     "es-hangul": "^2.2.1",
+    "leaflet": "^1.9.4",
     "next": "14.2.16",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
