--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@mui/styled-engine-sc": "^6.1.6",
     "@turf/center": "^7.1.0",
     "axios": "^1.7.7",
     "es-hangul": "^2.2.1",
@@ -23,7 +24,8 @@
     "next": "14.2.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.14",
